refactor(http): support request_id and trace_id in http server
