# docs/swagger.json
@@ -19,6 +19,12 @@
                 "summary": "accept an invitation",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Request ID",
+                        "name": "request_id",
+                        "in": "header"
+                    },
+                    {
                         "description": "Accept Invite Request Body",
                         "name": "AcceptInviteReq",
                         "in": "body",
@@ -60,6 +66,12 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Request ID",
+                        "name": "request_id",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
                         "description": "player uid",
                         "name": "uid",
                         "in": "path",
@@ -96,6 +108,12 @@
                 ],
                 "summary": "change a player's role",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Request ID",
+                        "name": "request_id",
+                        "in": "header"
+                    },
                     {
                         "description": "Change Role Request Body",
                         "name": "ChangeRoleReq",
@@ -137,6 +155,12 @@
                 "summary": "create a new group",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Request ID",
+                        "name": "request_id",
+                        "in": "header"
+                    },
+                    {
                         "description": "Create Group Request Body",
                         "name": "CreateGroup",
                         "in": "body",
@@ -172,6 +196,12 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Request ID",
+                        "name": "request_id",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
                         "description": "User ID",
                         "name": "uid",
                         "in": "path",
@@ -202,6 +232,12 @@
                 ],
                 "summary": "enter a group",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Request ID",
+                        "name": "request_id",
+                        "in": "header"
+                    },
                     {
                         "description": "Enter Group Request Body",
                         "name": "EnterGroupReq",
@@ -244,6 +280,12 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Request ID",
+                        "name": "request_id",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
                         "description": "User ID",
                         "name": "uid",
                         "in": "path",
@@ -274,6 +316,12 @@
                 ],
                 "summary": "invite a player",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Request ID",
+                        "name": "request_id",
+                        "in": "header"
+                    },
                     {
                         "description": "Invite Request Body",
                         "name": "InviteReq",
@@ -315,6 +363,12 @@
                 "summary": "kick a player",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Request ID",
+                        "name": "request_id",
+                        "in": "header"
+                    },
+                    {
                         "description": "Kick Player Request Body",
                         "name": "KickPlayerReq",
                         "in": "body",
@@ -354,6 +408,12 @@
                 ],
                 "summary": "refuse an invitation",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Request ID",
+                        "name": "request_id",
+                        "in": "header"
+                    },
                     {
                         "description": "Refuse Invite Request Body",
                         "name": "RefuseInviteReq",
@@ -395,6 +455,12 @@
                 "summary": "set nearby join group",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Request ID",
+                        "name": "request_id",
+                        "in": "header"
+                    },
+                    {
                         "description": "Set Nearby Join Group Request Body",
                         "name": "SetNearbyJoinGroupReq",
                         "in": "body",
@@ -434,6 +500,12 @@
                 ],
                 "summary": "set recent join group",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Request ID",
+                        "name": "request_id",
+                        "in": "header"
+                    },
                     {
                         "description": "Set Recent Join Group Request Body",
                         "name": "SetRecentJoinGroupReq",
@@ -475,6 +547,12 @@
                 "summary": "set voice state",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Request ID",
+                        "name": "request_id",
+                        "in": "header"
+                    },
+                    {
                         "description": "Set Voice State Request Body",
                         "name": "SetVoiceStateReq",
                         "in": "body",
@@ -514,6 +592,12 @@
                 ],
                 "summary": "start match",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Request ID",
+                        "name": "request_id",
+                        "in": "header"
+                    },
                     {
                         "type": "string",
                         "description": "player uid",
